:bug: Fix EMPI collaborations

--- a/data/de/sections/03-experiences.yaml
+++ b/data/de/sections/03-experiences.yaml
@@ -22,7 +22,7 @@ experiences:
       - "Durchführung elektrochemischer Leistungsanalysen von sprühbeschichteten Elektrodenschichten zur Erzeugung von grünem Wasserstoff mittels alkalischer Wasserelektrolyse (AWE)"
       - "Bewertung der Skalierbarkeit und Übertragbarkeit von modellbasierten Beschichtungen auf Nickelnetzsubstrate für die praktische Integration in AWE-Zellen"
       - "Unterstützung von F&E-Projektanträgen durch Identifizierung wichtiger Wissenslücken in der Anionenaustauschmembran (AEM)-Elektrolyse, Prognose zukünftiger Bedarfe und Untermauerung der Anträge mit datengestützten Analysen"
-      - "Enge Zusammenarbeit mit der RWTH Aachen, dem MPI CEC, der Universität Kiel und der FAU Erlangen beim Probenaustausch, Wissenstransfer und der Kommunikation im Rahmen des PrometH2eus-Projekts (H2Giga-Rahmenwerk)"
+      - "Eng arbeitete ich mit Forschungs- und Industriepartnern an Probenaustausch, Wissenstransfer und Kommunikation im Rahmen des PrometH2eus-Projekts (H2Giga-Programm) zusammen."
       - "Implementierung agiler Praktiken durch Behebung von Ineffizienzen im Arbeitsablauf, Verbesserung des Datenmanagements und Stärkung der Zusammenarbeit innerhalb der Forschungsgruppe"
 - company:
     name: Fachgebiet Transport in porösen Medien, Otto-von-Guericke-Universität
