--- a/data/en/sections/03-experiences.yaml
+++ b/data/en/sections/03-experiences.yaml
@@ -24,7 +24,7 @@ experiences:
       - "Conducted electrochemical performance analysis of spray-coated electrode layers for green hydrogen production via alkaline water electrolysis (AWE)"
       - "Evaluated the scalability and transferability of model-based coatings onto nickel mesh substrates for practical integration into AWE cells"
       - "Supported R&D project proposals by identifying key knowledge gaps in anion exchange membrane (AEM) electrolysis, forecasting future needs, and backing proposals with data-driven analysis"
-      - "Collaborated closely with RWTH Aachen, MPI CEC, University of Kiel, and FAU Erlangen on sample exchange, knowledge transfer, and communication within the PrometH2eus project (H2Giga framework)"
+      - "Collaborated closely with research and industrial partners on sample exchange, knowledge transfer, and communication within the PrometH2eus project (H2Giga framework)"
       - "Implemented agile practices by resolving workflow inefficiencies, improving data management, and enhancing collaboration within the research group"
 - company:
     name: Transport in Porous Media Group, Otto-von-Guericke University
