--- a/data/hi/sections/03-experiences.yaml
+++ b/data/hi/sections/03-experiences.yaml
@@ -25,7 +25,7 @@ experiences:
       - "क्षारीय जल इलेक्ट्रोलिसिस (AWE) के माध्यम से हरित हाइड्रोजन उत्पादन के लिए स्प्रे-कोटेड इलेक्ट्रोड परतों का इलेक्ट्रोकेमिकल प्रदर्शन विश्लेषण किया गया।"
       - "AWE कोशिकाओं में व्यावहारिक एकीकरण के लिए निकल जाल सबस्ट्रेट्स पर मॉडल-आधारित कोटिंग्स की स्केलेबिलिटी और हस्तांतरणीयता का मूल्यांकन किया गया।"
       - "आयन एक्सचेंज मेम्ब्रेन (AEM) इलेक्ट्रोलिसिस में प्रमुख ज्ञान अंतराल की पहचान करके, भविष्य की जरूरतों का पूर्वानुमान लगाकर और डेटा-संचालित विश्लेषण के साथ प्रस्तावों का समर्थन करके आर एंड डी परियोजना प्रस्तावों का समर्थन किया।"
-      - "PrometH2eus परियोजना (H2Giga ढांचे) के भीतर नमूना विनिमय, ज्ञान हस्तांतरण और संचार पर RWTH आकिन, MPI CEC, कील विश्वविद्यालय और FAU एर्लांगेन के साथ मिलकर काम किया।"
+      - "PrometH2eus परियोजना (H2Giga ढाँचा) के अंतर्गत नमूना आदान-प्रदान, ज्ञान हस्तांतरण और संचार पर अनुसंधान एवं औद्योगिक साझेदारों के साथ निकट सहयोग किया।"
       - "कार्यप्रवाह की अक्षमताओं को हल करके, डेटा प्रबंधन में सुधार करके और अनुसंधान समूह के भीतर सहयोग को बढ़ाकर चुस्त प्रथाओं को लागू किया।"
 - company:
     name: ट्रांसपोर्ट इन पोरस मीडिया ग्रुप, ओटो-वॉन-गुएरिके विश्वविद्यालय
