--- a/data/kn/sections/03-experiences.yaml
+++ b/data/kn/sections/03-experiences.yaml
@@ -25,7 +25,7 @@ experiences:
       - "ಕ್ಷಾರೀಯ ಜಲ ವಿದ್ಯುದ್ವಿಭಜನೆ (AWE) ಮೂಲಕ ಹಸಿರು ಹೈಡ್ರೋಜನ್ ಉತ್ಪಾದನೆಗಾಗಿ ಸ್ಪ್ರೇ-ಲೇಪಿತ ಎಲೆಕ್ಟ್ರೋಡ್ ಪದರಗಳ ವಿದ್ಯುದ್ರಾಸಾಯನಿಕ ಕಾರ್ಯಕ್ಷಮತೆಯ ವಿಶ್ಲೇಷಣೆಯನ್ನು ನಡೆಸಲಾಗಿದೆ"
       - "AWE ಕೋಶಗಳಲ್ಲಿ ಪ್ರಾಯೋಗಿಕ ಏಕೀಕರಣಕ್ಕಾಗಿ ನಿಕಲ್ ಮೆಶ್ ಸಬ್‌ಸ್ಟ್ರೇಟ್‌ಗಳ ಮೇಲೆ ಮಾದರಿ-ಆಧಾರಿತ ಲೇಪನಗಳ ವಿಸ್ತರಣೀಯತೆ ಮತ್ತು ವರ್ಗಾಯಿಸುವಿಕೆಯನ್ನು ಮೌಲ್ಯಮಾಪನ ಮಾಡಲಾಗಿದೆ"
       - "ಆನಯಾನ್ ಎಕ್ಸ್‌ಚೇಂಜ್ ಮೆಂಬ್ರೇನ್ (AEM) ವಿದ್ಯುದ್ವಿಭಜನೆಯಲ್ಲಿನ ಪ್ರಮುಖ ಜ್ಞಾನದ ಅಂತರಗಳನ್ನು ಗುರುತಿಸುವ ಮೂಲಕ, ಭವಿಷ್ಯದ ಅಗತ್ಯಗಳನ್ನು ಮುನ್ಸೂಚಿಸುವ ಮೂಲಕ, ಮತ್ತು ಡೇಟಾ-ಚಾಲಿತ ವಿಶ್ಲೇಷಣೆಯೊಂದಿಗೆ ಪ್ರಸ್ತಾಪಗಳನ್ನು ಬೆಂಬಲಿಸುವ ಮೂಲಕ ಆರ್&ಡಿ ಯೋಜನಾ ಪ್ರಸ್ತಾಪಗಳನ್ನು ಬೆಂಬಲಿಸಲಾಗಿದೆ"
-      - "PrometH2eus ಯೋಜನೆಯ (H2Giga ಚೌಕಟ್ಟು) ಅಡಿಯಲ್ಲಿ ಮಾದರಿ ವಿನಿಮಯ, ಜ್ಞಾನ ವರ್ಗಾವಣೆ, ಮತ್ತು ಸಂವಹನಕ್ಕಾಗಿ RWTH ಆಕೆನ್, MPI CEC, ಕೀಲ್ ವಿಶ್ವವಿದ್ಯಾಲಯ, ಮತ್ತು FAU ಎರ್ಲಾಂಗೆನ್ ಜೊತೆ ನಿಕಟವಾಗಿ ಸಹಕರಿಸಲಾಗಿದೆ"
+      - "PrometH2eus ಯೋಜನೆ (H2Giga ಚಟುವಟಿಕೆ) ಅಡಿಯಲ್ಲಿ ಮಾದರಿ ವಿನಿಮಯ, ಜ್ಞಾನ ವರ್ಗಾವಣೆ ಮತ್ತು ಸಂವಹನದ ಕುರಿತು ಸಂಶೋಧನಾ ಮತ್ತು ಕೈಗಾರಿಕಾ ಪಾಲುದಾರರೊಂದಿಗೆ ನಿಕಟವಾಗಿ ಸಹಕರಿಸಲಾಯಿತು."
       - "ಕಾರ್ಯಪ್ರವಾಹದ ಅಸಮರ್ಥತೆಗಳನ್ನು ಪರಿಹರಿಸುವ ಮೂಲಕ, ಡೇಟಾ ನಿರ್ವಹಣೆಯನ್ನು ಸುಧಾರಿಸುವ ಮೂಲಕ, ಮತ್ತು ಸಂಶೋಧನಾ ಗುಂಪಿನೊಳಗೆ ಸಹಯೋಗವನ್ನು ಹೆಚ್ಚಿಸುವ ಮೂಲಕ ಚುರುಕುಬುದ್ಧಿಯ ಪದ್ಧತಿಗಳನ್ನು ಜಾರಿಗೆ ತರಲಾಗಿದೆ"
 - company:
     name: ಟ್ರಾನ್ಸ್ಪೋರ್ಟ್ ಇನ್ ಪೋರಸ್ ಮೀಡಿಯಾ ಗ್ರೂಪ್, ಒಟ್ಟೊ-ವಾನ್-ಗೆರಿಕೆ ಯೂನಿವರ್ಸಿಟಿ
