--- a/data/kn/sections/06-publications.yaml
+++ b/data/kn/sections/06-publications.yaml
@@ -14,6 +14,45 @@ buttons:
     filter: "abstract"
 
 publications:
+- title: "Wetting across the Lyophilic–Lyophobic Spectrum: Morphological Tuning of Anode Catalyst Layers for the Alkaline Oxygen Evolution Reaction"
+  publishedIn:
+    name: "ACS Applied Materials & Interfaces"
+    date: "03 ನವೆಂಬರ್ 2025"
+  authors:
+    - name: Adarsh Jain
+      url: https://orcid.org/0009-0001-6199-8340
+    - name: Christian Marcks
+      url: https://orcid.org/0000-0003-3618-4246
+    - name: Gereon Mahler
+      url: https://orcid.org/0009-0004-7699-1784
+    - name: Ahammed Suhail Odungat
+      url: https://orcid.org/0009-0004-5838-346X
+    - name: Lars Grebener
+      url: https://www.researchgate.net/scientific-contributions/Lars-Grebener-2296803441
+    - name: Jacob Johny
+      url: https://orcid.org/0000-0002-5941-6348
+    - name: Mohit Chatwani
+      url: https://orcid.org/0009-0007-3471-6049
+    - name: Abhishek Shaji
+      url: https://www.researchgate.net/scientific-contributions/Abhishek-Shaji-2296794198
+    - name: Tobias Melchert
+      url: https://www.linkedin.com/in/tobias-melchert-119403336/?originalSubdomain=de
+    - name: Dr. Marc Frederic Tesch
+      url: https://orcid.org/0000-0001-7480-7200
+    - name: Prof. Dr. Malte Behrens
+      url: https://orcid.org/0000-0003-3407-5011
+    - name: Prof. Dr. Anna K. Mechler
+      url: https://orcid.org/0000-0002-0491-514X
+    - name: Dr. Vineetha Vinayakumar
+      url: https://orcid.org/0000-0002-6707-8051
+    - name: Prof. Dr. Doris Segets
+      url: https://orcid.org/0000-0003-3102-2934
+  paper:
+    summary: "ಆಮ್ಲಜನಕ ವಿಕಸನ ಕ್ರಿಯೆಯ ಎಲೆಕ್ಟ್ರೋಕೆಮಿಕಲ್ ಕಾರ್ಯಕ್ಷಮತೆಯ ಮೇಲೆ ಸ್ಪ್ರೇ-ಲೇಪಿತ ನಿಕಲ್ ಕಬ್ಬಿಣದ ಲೇಯರ್ಡ್ ಡಬಲ್ ಹೈಡ್ರಾಕ್ಸೈಡ್ (Ni–Fe-LDH) ಆನೋಡ್‌ಗಳ ಸೂಪರ್ಲೈಫಿಲಿಸಿಟಿ ಮತ್ತು ಸೂಪರ್ಲೈಫೋಬಿಸಿಟಿಯ ಪ್ರಭಾವವನ್ನು ಅಧ್ಯಯನವು ತನಿಖೆ ಮಾಡುತ್ತದೆ."
+    url: https://doi.org/10.1021/acsami.5c15573
+  categories: ["reviewed"]
+  tags: ["ವಿದ್ಯುತ್ ವೇಗವರ್ಧನೆ", "ಆಮ್ಲಜನಕ ವಿಕಸನ ಪ್ರತಿಕ್ರಿಯೆ", "ಸೂಕ್ಷ್ಮ ರಚನೆ", "ಕ್ರಿಯಾತ್ಮಕ ವಸ್ತುಗಳು"]
+  
 - title: "A Proof-of-Principle Demonstration: Exploring the Effect of Anode Layer Microstructure on the Alkaline Oxygen Evolution Reaction"
   publishedIn:
     name: "Advanced Functional Materials (Wiley)"
