--- a/data/hi/sections/06-publications.yaml
+++ b/data/hi/sections/06-publications.yaml
@@ -17,7 +17,7 @@ publications:
 - title: "Wetting across the Lyophilic–Lyophobic Spectrum: Morphological Tuning of Anode Catalyst Layers for the Alkaline Oxygen Evolution Reaction"
   publishedIn:
     name: "ACS Applied Materials & Interfaces"
-    date: "03 November 2025"
+    date: "03 नवंबर 2025"
   authors:
     - name: Adarsh Jain
       url: https://orcid.org/0009-0001-6199-8340
